--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,22 +1,26 @@
 header {   
     
     height: 68.9vh;
-    margin: 3.15rem 1.8rem;
-    border: 1px solid red;    
+    margin: 3.15rem;
+    margin-left: 25px;
+    margin-right: 25px;
+    // border: 1px solid red;    
 }
 
 h1 {
     font-size: 5.6rem;
     font-weight: 700;
     max-width: 450px;
-    letter-spacing: 0.91px;
+    letter-spacing: 0.30rem;
     color: $dark;
+   
 
     .line2 {
+        // border: 1px dashed orange;
         margin-top: -31px;
         background-color: $primary;
         background-image: $to-right;
-        -webkit-background-clip: text;
+        -webkit-background-clip: text;        
         -webkit-text-fill-color: transparent;
     }
 }
