--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,7 +5,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+    outline: none; 
+   }
 
 // body {
 //     border: 1px solid black;
