--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,12 +1,13 @@
 footer {
     height: 20vh;
     width: 100%;
-    background: $dark-minus-60;    
+    background: $dark-minus-60;
+    padding: 0 25px 0 25px;           
 }
 
-.inner {
-    border: 1px solid purple;
-    height: 100%;
-    margin: 0 25px;
+// .inner {
+//     border: 1px solid purple;
+//     height: 100%;
+//     margin: 0 25px;
     
-}
+// }
