--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,10 +4,12 @@ header {
     margin: 3.15rem;
     margin-left: 25px;
     margin-right: 25px;
-    // border: 1px solid red;    
+       
 }
 
 h1 {
+    // border: 1px solid red;
+    margin-bottom: 3.15rem; 
     font-size: 5.6rem;
     font-weight: 700;
     max-width: 450px;
@@ -23,6 +25,31 @@ h1 {
         -webkit-background-clip: text;        
         -webkit-text-fill-color: transparent;
     }
+}
+
+input[type=email] {
+    background-image: url('/assets/icons/email-icon.svg');
+    background-position: 15px 7.5px;
+    background-repeat: no-repeat;
+    
+    width: 100%;    
+    padding: 7.5px 30px 7.5px 50px;
+
+    border: 3.93px solid $dark-80;
+    border-radius: 100px;
+    
+    font-size: 1.077rem;
+    font-family: 'Poppins', sans-serif; 
+    
+    &::placeholder {
+        color: $dark-minus;
+    }
+    
+    &:focus-visible {
+        outline: 0.5px solid $dark;
+    }
+
+    
 }
 
 
