Apply styles to button. For now, finish the form styles for mobile layout

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,13 +1,7 @@
 footer {
-    height: 20vh;
+    height: calc(39.4vh - 3.15rem);
     width: 100%;
     background: $dark-minus-60;
     padding: 0 25px 0 25px;           
 }
 
-// .inner {
-//     border: 1px solid purple;
-//     height: 100%;
-//     margin: 0 25px;
-    
-// }
