--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -8,7 +8,7 @@
 }
 
 body, html {
-  height: 100%;
+  max-height: 100%;
   max-width: 1440px;
   min-width: 310px;
   margin: 0 auto;
@@ -30,14 +30,14 @@ h3 {
 }
 
 header {
-  height: 68.9vh;
-  margin: 3.15rem;
+  height: calc(61.6vh - 3.15rem);
+  margin-top: 3.15rem;
   margin-left: 25px;
   margin-right: 25px;
 }
 
 h1 {
-  margin-bottom: 3.15rem;
+  margin-bottom: 5.8rem;
   font-size: 5.6rem;
   font-weight: 700;
   max-width: 450px;
@@ -54,16 +54,24 @@ h1 .line2 {
   -webkit-text-fill-color: transparent;
 }
 
+.subscription {
+  text-align: center;
+}
+
+input {
+  font-family: 'Poppins', sans-serif;
+}
+
 input[type=email] {
+  width: 100%;
+  padding: 7.5px 30px 7.5px 50px;
+  margin-bottom: 1.7rem;
   background-image: url("/assets/icons/email-icon.svg");
   background-position: 15px 7.5px;
   background-repeat: no-repeat;
-  width: 100%;
-  padding: 7.5px 30px 7.5px 50px;
   border: 3.93px solid rgba(41, 41, 41, 0.8);
   border-radius: 100px;
   font-size: 1.077rem;
-  font-family: 'Poppins', sans-serif;
 }
 
 input[type=email]::-webkit-input-placeholder {
@@ -86,8 +94,22 @@ input[type=email]:focus-visible {
   outline: 0.5px solid #292929;
 }
 
+input[type=submit] {
+  padding: 0.65rem 2.6rem;
+  margin: 0 auto;
+  background-image: -webkit-gradient(linear, left top, right top, from(#dc186e), to(#2AA1FE));
+  background-image: linear-gradient(to right, #dc186e, #2AA1FE);
+  outline: none;
+  border: none;
+  border-radius: 70px;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.07rem;
+  color: #FFF;
+}
+
 footer {
-  height: 20vh;
+  height: calc(39.4vh - 3.15rem);
   width: 100%;
   background: rgba(59, 59, 59, 0.6);
   padding: 0 25px 0 25px;
