--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,5 +1,5 @@
 //light, regular, medium, bold
-@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -18,7 +18,7 @@
 
 body, html {
     // border: 1px solid green;
-    height: 100%;    
+    max-height: 100%;    
     max-width: 1440px;
     min-width: 310px;
     margin: 0 auto;
