--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,14 +5,19 @@
   margin: 0;
   padding: 0;
   outline: none;
+  list-style: none;
 }
 
 body, html {
-  max-height: 100%;
+  height: 100vh;
+  font-size: 13px;
+}
+
+body {
+  border: 1px solid green;
   max-width: 1440px;
   min-width: 310px;
   margin: 0 auto;
-  font-size: 13px;
   font-weight: 400;
   font-family: 'Poppins', sans-serif;
 }
@@ -30,8 +35,13 @@ h3 {
 }
 
 header {
-  height: calc(61.6vh - 3.15rem);
-  margin-top: 3.15rem;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#FFF), to(#EDEDED));
+  background-image: linear-gradient(to bottom right, #FFF, #EDEDED);
+}
+
+.header-container {
+  height: 61vh;
+  padding-top: 3.15rem;
   margin-left: 25px;
   margin-right: 25px;
 }
@@ -69,6 +79,7 @@ input[type=email] {
   background-image: url("/assets/icons/email-icon.svg");
   background-position: 15px 7.5px;
   background-repeat: no-repeat;
+  background-color: #EDEDED;
   border: 3.93px solid rgba(41, 41, 41, 0.8);
   border-radius: 100px;
   font-size: 1.077rem;
@@ -109,9 +120,81 @@ input[type=submit] {
 }
 
 footer {
-  height: calc(39.4vh - 3.15rem);
+  height: 38.9vh;
   width: 100%;
   background: rgba(59, 59, 59, 0.6);
   padding: 0 25px 0 25px;
+}
+
+.counter-container {
+  position: absolute;
+  margin-top: -1.077rem;
+  margin-bottom: 13.4rem;
+  border: 1px solid red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.time-container {
+  margin-left: 1.29rem;
+}
+
+.time-container:first-child {
+  margin-left: 0;
+}
+
+.outer-circle {
+  position: relative;
+  height: 5.25rem;
+  width: 5.25rem;
+  border-radius: 50%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#B50B56), to(#047CD9));
+  background-image: linear-gradient(to right, #B50B56, #047CD9);
+  -webkit-box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
+          box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
+}
+
+.inner-circle {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: radial-gradient(#F5F5F5, #FFF);
+  border-radius: inherit;
+  top: 0.3rem;
+  bottom: 0.3rem;
+  right: 0.3rem;
+  left: 0.3rem;
+  z-index: 3;
+  font-family: 'Michroma', sans-serif;
+  font-size: 1.23rem;
+  letter-spacing: 1px;
+}
+
+.number-days {
+  letter-spacing: 0.7px;
+}
+
+.time-label {
+  margin-top: 0.6rem;
+  color: #F5F5F5;
+  text-align: center;
+}
+
+.social-icons {
+  position: relative;
+  top: 14.46rem;
+  border: 1px solid black;
+}
+
+li {
+  display: inline-block;
 }
 /*# sourceMappingURL=main.css.map */
