--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,28 +5,28 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    outline: none; 
+    outline: none;
+    list-style: none; 
    }
 
-// body {
-//     border: 1px solid black;
-// }
-
-// html {
-//     border: 1px solid yellow;
-// }
-
 body, html {
-    // border: 1px solid green;
-    max-height: 100%;    
+    height: 100vh;
+    font-size: 13px;
+}
+
+body {
+    border: 1px solid green;
+    
+    
     max-width: 1440px;
     min-width: 310px;
     margin: 0 auto;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: 'Poppins', sans-serif;    
-}
 
+    
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+        
+}
 
 h1, h2 {
     font-weight: 700;
