--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,8 @@ input[type=email]:focus-visible {
 input[type=submit] {
   padding: 0.65rem 2.6rem;
   margin: 0 auto;
+  -webkit-transition: opacity .4s ease-in;
+  transition: opacity .4s ease-in;
   background-image: -webkit-gradient(linear, left top, right top, from(#dc186e), to(#2AA1FE));
   background-image: linear-gradient(to right, #dc186e, #2AA1FE);
   outline: none;
@@ -119,10 +121,14 @@ input[type=submit] {
   color: #FFF;
 }
 
+input[type=submit]:hover {
+  opacity: 0.8;
+}
+
 footer {
   height: 38.9vh;
   width: 100%;
-  background: rgba(59, 59, 59, 0.6);
+  background: #999999;
   padding: 0 25px 0 25px;
 }
 
@@ -130,7 +136,6 @@ footer {
   position: absolute;
   margin-top: -1.077rem;
   margin-bottom: 13.4rem;
-  border: 1px solid red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,18 +150,8 @@ footer {
 }
 
 .outer-circle {
-  position: relative;
   height: 5.25rem;
   width: 5.25rem;
-  border-radius: 50%;
-  background-image: -webkit-gradient(linear, left top, right top, from(#B50B56), to(#047CD9));
-  background-image: linear-gradient(to right, #B50B56, #047CD9);
-  -webkit-box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
-          box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
-}
-
-.inner-circle {
-  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,16 +161,33 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  border-radius: 50%;
+  background-color: #2AA1FE;
+  background-image: -webkit-gradient(linear, left top, right top, from(#dc186e), to(#047CD9));
+  background-image: linear-gradient(to right, #dc186e, #047CD9);
+  -webkit-box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
+          box-shadow: 1.25px -1.25px 9.35px rgba(0, 0, 0, 0.2);
+  padding: 3%;
+}
+
+.inner-circle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 4.7rem;
+  width: 4.7rem;
   background-image: radial-gradient(#F5F5F5, #FFF);
   border-radius: inherit;
-  top: 0.3rem;
-  bottom: 0.3rem;
-  right: 0.3rem;
-  left: 0.3rem;
-  z-index: 3;
   font-family: 'Michroma', sans-serif;
   font-size: 1.23rem;
   letter-spacing: 1px;
+  color: #3B3B3B;
 }
 
 .number-days {
@@ -190,11 +202,28 @@ footer {
 
 .social-icons {
   position: relative;
-  top: 14.46rem;
-  border: 1px solid black;
+  top: 18.77rem;
+  text-align: center;
 }
 
 li {
   display: inline-block;
+  margin-left: 1.54rem;
+}
+
+li svg path {
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+  fill: #FFF;
+}
+
+li:first-child {
+  margin-left: 0;
+}
+
+li:hover svg path {
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+  fill: #3B3B3B;
 }
 /*# sourceMappingURL=main.css.map */
