--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,10 +1,10 @@
 footer {
-    // border: 1px solid yellow;
-    height: 38.9vh;
+    // border: 1px solid yellow;    
+    height: 50%;
+    // height: auto;
     width: 100%;
     background: #999999;
-    padding: 0 25px 0 25px;
-    // position: relative;           
+    padding: 0 1.93rem 24rem 1.93rem;                 
 }
 
 .counter-container {
@@ -12,7 +12,8 @@ footer {
     margin-top: -1.077rem;
     margin-bottom: 13.4rem;
     // border: 1px solid red;
-    display: flex;   
+    display: flex;    
+   
 }
 
 .time-container {
@@ -24,8 +25,7 @@ footer {
         
 }
 
-.outer-circle {
-    // position: relative;
+.outer-circle {    
     height: 5.25rem;
     width: 5.25rem;
     display: flex;
@@ -34,18 +34,17 @@ footer {
     
     border-radius: 50%;
     background-color: $secondary;
-    background-image: $to-right-plus;
-    box-shadow: 1.25px -1.25px 9.35px hsla(0, 0%, 0%, 0.2);
-    padding: 3%;
+    background-image: $to-right-test;
+    box-shadow: 0.097rem -0.097rem 0.720rem hsla(0, 0%, 0%, 0.2);
+    
 }
 
-.inner-circle {
-    // position: absolute;
+.inner-circle {    
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 4.7rem;
-    width: 4.7rem;
+    height: 4.6rem;
+    width: 4.6rem;
     
     background-image: $circle-bg;
     border-radius: inherit; 
@@ -54,13 +53,13 @@ footer {
     
     font-family: 'Michroma', sans-serif;
     font-size: 1.23rem;
-    letter-spacing: 1px;  
+    letter-spacing: 0.077rem;  
     
     color: $dark-minus;
 }
 
 .number-days {
-    letter-spacing: 0.7px;
+    letter-spacing: 0.054rem;
     
 }
 
@@ -70,15 +69,71 @@ footer {
     text-align: center;
 }
 
-.social-icons {
-    position: relative;    
-    top: 18.77rem;    
-    // border: 1px solid $light;
+.config-container { 
     
-    text-align: center;
+    position: absolute;
+    margin-top: 12rem;
+    margin-left: 21.5rem;    
+    transform: translateY(-50%);
+    
+    
+    cursor: pointer; 
+
+    .button {
+        position: relative;
+
+        display: flex;       
+        align-items: center;        
+        justify-content: center;
+
+        // border: 1px solid green;
+              
+        width: 2rem;
+        height: 2rem;
+        padding: 0;
+        
+        background: $header-bg;
+        border-radius: 13%;
+
+            svg * {
+                width: 100%;
+                height: 100%;
+            }
+
+            svg {
+                
+                width: 2rem;
+                height: 2rem;    
+                path {
+                    stroke: $dark-minus;
+                }
+            }
+
+        .border-bg {
+            position: absolute;
+            
+            top: -0.2rem;
+            bottom: -0.2rem;
+            left: -0.2rem;
+            right: -0.2rem;
+            
+            
+            background: $to-right;
+            
+            border-radius: 15%;
+
+            z-index: -3;
+        }
+    }
 }
 
-
+.social-icons {
+    // border: 1px solid gold;
+    position: absolute;
+    margin-top: 19rem;
+    left: 50%;
+    transform: translateX(-50%);      
+}
 
 li {
     display: inline-block;
@@ -88,7 +143,7 @@ li {
     
     svg {
         path {
-            transition: all .4s ease;
+            transition: all .5s ease;
             fill: $light-minus;
         }
     }
@@ -98,16 +153,24 @@ li {
     }
 
     &:hover {
-        
+        opacity: 0.8;
         svg {
             
             path {
-                transition: all .4s ease;
+                // transition: all .5s ease;
                 fill: $dark-minus;
-                
+                                
             }
         }
     }
+}
+
+.attribution {
+    position: relative;
+    top: 22rem;
+    font-size: 0.7rem;
+    color: $light-plus;
+    text-align: center;
 }
 
 
