--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -44,6 +44,24 @@ input[type=submit], li {
     cursor: pointer;
 }
 
+@mixin media-sm {
+    @media screen and (min-width: 640px) {
+        @content;
+    }
+}
+
+@mixin media-md {
+    @media screen and (min-width: 768px) {
+        @content;
+    } 
+}
+
+@mixin media-lg {
+    @media screen and (min-width: 1024px) {
+        @content;
+    }
+}
+
 
 
 
