--- a/public/css/main.css
+++ b/public/css/main.css
@@ -306,11 +306,14 @@ li:hover svg path {
 
 @media screen and (min-width: 640px) {
   body {
-    border: 2px dashed gold;
+    border: 2px solid red;
   }
 }
 
 @media screen and (min-width: 1024px) {
+  body {
+    border: 1px solid blue;
+  }
   .header-container {
     border: 1px solid black;
     padding-top: 7.70rem;
@@ -319,33 +322,92 @@ li:hover svg path {
     background-image: url(../../assets/hero-img.png);
     background-position: right center;
     background-repeat: no-repeat;
-    background-size: 35%;
+    background-size: 38%;
   }
   h1 {
+    border: 1px solid green;
     width: 50%;
-    margin-bottom: 3.46rem;
-    font-size: 7.761rem;
+    margin-bottom: 2.5rem;
+    font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+  }
+  h1 .line2 {
+    margin-top: -3.5rem;
   }
   .subscription {
     text-align: initial;
+    width: 60%;
   }
   input[type=email] {
-    width: 60%;
-    padding: 1.84rem 2.3rem 1.84rem 5.38rem;
+    width: 100%;
+    padding: 1.84rem 22rem 1.84rem 5.38rem;
     background-image: url("/assets/icons/email-icon.svg");
     background-position: 1.7rem 2rem;
     background-repeat: no-repeat;
     background-color: #EDEDED;
     border: 0.5rem solid rgba(41, 41, 41, 0.8);
     border-radius: 7.7rem;
-    font-size: 1.24rem;
+    font-size: 1.16rem;
   }
   input[type=email]:focus-visible {
     border: 0.5rem solid #2AA1FE;
   }
   input[type=submit] {
+    position: absolute;
     padding: 1.27rem 3.84rem;
-    margin: 0 auto 0 -18.5rem;
+    margin: 0.85rem auto 0 -18.3rem;
+    font-size: 1.46rem;
+    font-weight: 700;
+  }
+  .button-container {
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    border: 2px solid gold;
+  }
+  .header-container {
+    border: 1px solid black;
+    padding-top: 7.70rem;
+    margin-left: 10.92rem;
+    margin-right: 10.92rem;
+    background-image: url(../../assets/hero-img.png);
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: 38%;
+  }
+  h1 {
+    border: 1px solid green;
+    width: 50%;
+    margin-bottom: 2.5rem;
+    font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+  }
+  h1 .line2 {
+    margin-top: -3.5rem;
+  }
+  .subscription {
+    text-align: initial;
+    width: 60%;
+  }
+  input[type=email] {
+    width: 100%;
+    padding: 1.84rem 22rem 1.84rem 5.38rem;
+    background-image: url("/assets/icons/email-icon.svg");
+    background-position: 1.7rem 2rem;
+    background-repeat: no-repeat;
+    background-color: #EDEDED;
+    border: 0.5rem solid rgba(41, 41, 41, 0.8);
+    border-radius: 7.7rem;
+    font-size: 1.16rem;
+  }
+  input[type=email]:focus-visible {
+    border: 0.5rem solid #2AA1FE;
+  }
+  input[type=submit] {
+    position: absolute;
+    padding: 1.27rem 3.84rem;
+    margin: 0.85rem auto 0 -18.3rem;
     font-size: 1.46rem;
     font-weight: 700;
   }
