--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -62,6 +62,12 @@ input[type=submit], li {
     }
 }
 
+@mixin media-xl {
+    @media screen and (min-width: 1440px) {
+        @content;
+    } 
+}
+
 
 
 
