--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -1,15 +1,20 @@
 @include media-sm {    
         body {
-           border: 2px dashed gold;
+           border: 2px solid red;
         }
 }
 
-// @include media-md {
-    
+// @include media-lg {
+//     body {
+//         border: 1px solid blue;
+//     }    
 // }
 
 @include media-lg {
     
+    body {
+        border: 1px solid blue;
+    }
 
     .header-container {   
         border: 1px solid black;            
@@ -21,27 +26,35 @@
         background-image: url(../../assets/hero-img.png);
         background-position: right center;
         background-repeat: no-repeat;
-        background-size: max(35%);
+        background-size: max(38%);
 
            
     }
 
     h1 {
-        // border: 1px solid green;
-       width: 50%;
-        margin-bottom: 3.46rem;
-        font-size: 7.761rem;
+        border: 1px solid green;
+        width: 50%;
+        margin-bottom: 2.5rem;
+        font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+        // font-size: max(7.761rem);
+        // font-size: 7vw + 1rem;
+
+        .line2 {
+            margin-top: -3.5rem;
+        }
     }
 
 
     .subscription {    
         text-align: initial;
+        width: 60%;
+        
     }    
    
     
     input[type=email] {
-        width: 60%;    
-        padding: 1.84rem 2.3rem 1.84rem 5.38rem;
+        width: 100%;    
+        padding: 1.84rem 22rem 1.84rem 5.38rem;
         
     
         background-image: url('/assets/icons/email-icon.svg');
@@ -54,7 +67,7 @@
         border-radius: 7.7rem;
 
         
-        font-size: 1.24rem;        
+        font-size: 1.16rem;        
        
         
         &:focus-visible {            
@@ -65,8 +78,93 @@
     }
     
     input[type=submit] {    
+        position: absolute;
         padding: 1.27rem 3.84rem;
-        margin: 0 auto 0 -18.5rem;
+        margin: 0.85rem auto 0 -18.3rem;
+        
+    
+        font-size: 1.46rem;
+        font-weight: 700;
+        
+       
+    }
+
+    .button-container {
+        margin-top: 3rem;
+    }
+}
+
+@include media-xl {
+    
+    body {
+        border: 2px solid gold;
+    }
+
+    .header-container {   
+        border: 1px solid black;            
+        padding-top: 7.70rem;
+        // padding-bottom: 7.2rem;
+        margin-left: 10.92rem;
+        margin-right: 10.92rem;
+
+        background-image: url(../../assets/hero-img.png);
+        background-position: right center;
+        background-repeat: no-repeat;
+        background-size: max(38%);
+
+           
+    }
+
+    h1 {
+        border: 1px solid green;
+        width: 50%;
+        margin-bottom: 2.5rem;
+        font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+        // font-size: max(7.761rem);
+        // font-size: 7vw + 1rem;
+
+        .line2 {
+            margin-top: -3.5rem;
+        }
+    }
+
+
+    .subscription {    
+        text-align: initial;
+        width: 60%;
+        
+    }    
+   
+    
+    input[type=email] {
+        width: 100%;    
+        padding: 1.84rem 22rem 1.84rem 5.38rem;
+        
+    
+        background-image: url('/assets/icons/email-icon.svg');
+        background-position: 1.7rem 2rem;
+        background-repeat: no-repeat;
+        background-color: $light-plus;      
+
+    
+        border: 0.5rem solid $dark-80;
+        border-radius: 7.7rem;
+
+        
+        font-size: 1.16rem;        
+       
+        
+        &:focus-visible {            
+            border: 0.5rem solid $secondary;
+        }
+    
+        
+    }
+    
+    input[type=submit] {    
+        position: absolute;
+        padding: 1.27rem 3.84rem;
+        margin: 0.85rem auto 0 -18.3rem;
         
     
         font-size: 1.46rem;
