--- a/public/css/main.css
+++ b/public/css/main.css
@@ -308,6 +308,23 @@ li:hover svg path {
   body {
     border: 2px solid red;
   }
+  .header-container {
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }
+  h1 {
+    font-size: clamp(6rem, calc(12vw + 0.5rem), 7.7rem);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    border: 2px dotted black;
+  }
+  .header-container {
+    margin-left: 5.46rem;
+    margin-right: 5.46rem;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -315,31 +332,30 @@ li:hover svg path {
     border: 1px solid blue;
   }
   .header-container {
-    border: 1px solid black;
     padding-top: 7.70rem;
-    margin-left: 10.92rem;
-    margin-right: 10.92rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
     background-image: url(../../assets/hero-img.png);
-    background-position: right center;
+    background-position: right 10rem;
     background-repeat: no-repeat;
-    background-size: 38%;
+    background-size: 30%;
   }
   h1 {
-    border: 1px solid green;
     width: 50%;
     margin-bottom: 2.5rem;
-    font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+    font-size: clamp(1rem, calc(12vw + 0.5rem), 7.7rem);
   }
   h1 .line2 {
     margin-top: -3.5rem;
   }
   .subscription {
     text-align: initial;
-    width: 60%;
+    width: 72%;
+    width: calc(min(650px, 72%));
   }
   input[type=email] {
     width: 100%;
-    padding: 1.84rem 22rem 1.84rem 5.38rem;
+    padding: 1.84rem 19rem 1.84rem 4.8rem;
     background-image: url("/assets/icons/email-icon.svg");
     background-position: 1.7rem 2rem;
     background-repeat: no-repeat;
@@ -358,6 +374,12 @@ li:hover svg path {
     font-size: 1.46rem;
     font-weight: 700;
   }
+  .time-container {
+    margin-left: 6rem;
+  }
+  .time-container:first-child {
+    margin-left: 0;
+  }
   .button-container {
     margin-top: 3rem;
   }
@@ -368,31 +390,26 @@ li:hover svg path {
     border: 2px solid gold;
   }
   .header-container {
-    border: 1px solid black;
     padding-top: 7.70rem;
     margin-left: 10.92rem;
     margin-right: 10.92rem;
     background-image: url(../../assets/hero-img.png);
-    background-position: right center;
+    background-position: right 5rem;
     background-repeat: no-repeat;
-    background-size: 38%;
+    background-size: 40%;
   }
   h1 {
-    border: 1px solid green;
     width: 50%;
     margin-bottom: 2.5rem;
     font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+    letter-spacing: 0.4rem;
   }
   h1 .line2 {
     margin-top: -3.5rem;
   }
-  .subscription {
-    text-align: initial;
-    width: 60%;
-  }
   input[type=email] {
     width: 100%;
-    padding: 1.84rem 22rem 1.84rem 5.38rem;
+    padding: 1.84rem 20rem 1.84rem 5.38rem;
     background-image: url("/assets/icons/email-icon.svg");
     background-position: 1.7rem 2rem;
     background-repeat: no-repeat;
